--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "semver": "5.3.0",
     "shelljs": "0.7.6",
     "split": "1.0.0",
-    "storyboard": "^2.0.0",
+    "storyboard": "^3.0.0-rc.1",
+    "storyboard-preset-console": "^3.0.0-rc.1",
     "timm": "^1.2.3"
   },
   "devDependencies": {
