--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "scripts": {
     "build": "yarn lint && yarn compile && yarn test && yarn xxl",
+    "travis": "yarn test",
     "lint": "eslint src",
-    "compile": "rm -rf lib && babel src -d lib",
-    "jest": "jest --watch --coverage",
+    "compile": "rm -rf lib && babel src -d lib --ignore \"**/__mocks__/**\",\"**/__tests__/**\"",
+    "jest": "jest --watch --coverage --verbose",
     "test": "yarn testCovFull",
     "testFast": "jest",
     "testCovFull": "yarn _testCovPrepare && yarn _testDev && yarn _testCovReport",
@@ -39,6 +40,7 @@
     "globby": "6.1.0",
     "inquirer": "3.0.1",
     "babel-polyfill": "6.22.0",
+    "kebab-case": "1.0.0",
     "semver": "5.3.0",
     "shelljs": "0.7.6",
     "split": "1.0.0",
@@ -54,6 +56,7 @@
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
     "babel-preset-stage-2": "6.22.0",
+    "coveralls": "2.11.16",
     "eslint": "3.15.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-flowtype": "2.30.0",
