--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
   },
   "homepage": "https://github.com/guigrpa/oao#readme",
   "dependencies": {
+    "babel-polyfill": "6.22.0",
     "commander": "2.9.0",
     "globby": "6.1.0",
     "inquirer": "3.0.1",
-    "babel-polyfill": "6.22.0",
     "kebab-case": "1.0.0",
     "semver": "5.3.0",
     "shelljs": "0.7.6",
@@ -68,6 +68,7 @@
     "xxl": "^1.0.1"
   },
   "jest": {
+    "resetMocks": true,
     "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(js|jsx)$",
     "coverageDirectory": ".nyc_output",
     "coverageReporters": [
@@ -77,6 +78,8 @@
     ],
     "collectCoverageFrom": [
       "src/**/*.js",
+      "!src/index.js",
+      "!src/utils/git.js",
       "!**/node_modules/**",
       "!**/__tests__/**",
       "!**/__mocks__/**"
