--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "semver": "5.3.0",
     "shelljs": "0.7.6",
     "split": "1.0.0",
-    "storyboard": "^3.0.0-rc.2",
-    "storyboard-preset-console": "^3.0.0-rc.4",
+    "storyboard": "^3.0.0",
+    "storyboard-preset-console": "^3.0.0",
     "terminal-kit": "^0.26.1",
     "timm": "^1.2.3"
   },
@@ -54,7 +54,7 @@
     "babel-cli": "6.22.2",
     "babel-core": "6.22.1",
     "babel-eslint": "7.1.1",
-    "babel-jest": "18.0.0",
+    "babel-jest": "^19.0.0",
     "babel-preset-es2015": "6.22.0",
     "babel-preset-react": "6.22.0",
     "babel-preset-stage-2": "6.22.0",
@@ -66,7 +66,7 @@
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.9.0",
     "flow-bin": "0.39.0",
-    "jest": "18.1.0",
+    "jest": "^19.0.1",
     "nyc": "10.1.2",
     "xxl": "^1.1.0"
   },
