--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "globby": "6.1.0",
     "inquirer": "3.0.1",
     "kebab-case": "1.0.0",
+    "rimraf": "^2.6.1",
     "semver": "5.3.0",
     "shelljs": "0.7.6",
     "split": "1.0.0",
@@ -72,7 +73,7 @@
     "xxl": "^1.1.0"
   },
   "jest": {
-    "resetMocks": true,
+    "clearMocks": true,
     "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(js|jsx)$",
     "coverageDirectory": ".nyc_output",
     "coverageReporters": [
