--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "babel-polyfill": "6.22.0",
     "commander": "2.9.0",
+    "execa": "^0.6.0",
     "globby": "6.1.0",
     "inquirer": "3.0.1",
     "kebab-case": "1.0.0",
