--- a/package.json
+++ b/package.json
@@ -37,38 +37,38 @@
   },
   "homepage": "https://github.com/guigrpa/oao#readme",
   "dependencies": {
-    "babel-polyfill": "6.22.0",
+    "babel-polyfill": "^6.23.0",
     "commander": "2.9.0",
     "execa": "^0.6.0",
     "globby": "6.1.0",
-    "inquirer": "3.0.1",
+    "inquirer": "^3.0.5",
     "kebab-case": "1.0.0",
     "rimraf": "^2.6.1",
     "semver": "5.3.0",
     "shelljs": "0.7.6",
     "split": "1.0.0",
-    "storyboard": "^3.1.0",
-    "storyboard-listener-console": "^3.0.0",
-    "storyboard-listener-console-parallel": "^3.1.0",
-    "terminal-kit": "^0.26.1",
+    "storyboard": "^3.1.1",
+    "storyboard-listener-console": "^3.1.1",
+    "storyboard-listener-console-parallel": "^3.1.1",
+    "terminal-kit": "^0.26.2",
     "timm": "^1.2.3"
   },
   "devDependencies": {
-    "babel-cli": "6.22.2",
-    "babel-core": "6.22.1",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
     "babel-eslint": "7.1.1",
     "babel-jest": "^19.0.0",
     "babel-preset-es2015": "6.22.0",
-    "babel-preset-react": "6.22.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "6.22.0",
     "coveralls": "2.11.16",
-    "eslint": "3.15.0",
+    "eslint": "^3.16.1",
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-flowtype": "2.30.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "6.9.0",
-    "flow-bin": "0.39.0",
+    "eslint-plugin-react": "^6.10.0",
+    "flow-bin": "^0.40.0",
     "jest": "^19.0.1",
     "nyc": "10.1.2",
     "xxl": "^1.1.0"
