--- a/package.json
+++ b/package.json
@@ -45,32 +45,32 @@
     "kebab-case": "1.0.0",
     "rimraf": "^2.6.1",
     "semver": "5.3.0",
-    "shelljs": "0.7.6",
+    "shelljs": "^0.7.7",
     "split": "1.0.0",
     "storyboard": "^3.1.1",
     "storyboard-listener-console": "^3.1.1",
-    "storyboard-listener-console-parallel": "^3.1.1",
+    "storyboard-listener-console-parallel": "^3.1.2",
     "terminal-kit": "^0.26.2",
     "timm": "^1.2.3"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
-    "babel-eslint": "7.1.1",
+    "babel-eslint": "^7.2.2",
     "babel-jest": "^19.0.0",
-    "babel-preset-es2015": "6.22.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "6.22.0",
-    "coveralls": "2.11.16",
+    "babel-preset-stage-2": "^6.24.1",
+    "coveralls": "^2.13.0",
     "eslint": "^3.16.1",
     "eslint-config-airbnb": "14.1.0",
-    "eslint-plugin-flowtype": "2.30.0",
+    "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "flow-bin": "^0.42.0",
+    "flow-bin": "^0.44.0",
     "jest": "^19.0.1",
-    "nyc": "10.1.2",
+    "nyc": "^10.2.0",
     "xxl": "^1.1.0"
   },
   "jest": {
