--- a/package.json
+++ b/package.json
@@ -38,40 +38,39 @@
   "homepage": "https://github.com/guigrpa/oao#readme",
   "dependencies": {
     "babel-polyfill": "^6.23.0",
-    "commander": "2.9.0",
+    "commander": "^2.9.0",
     "execa": "^0.6.0",
-    "globby": "6.1.0",
+    "globby": "^6.1.0",
     "inquirer": "^3.0.5",
-    "kebab-case": "1.0.0",
+    "kebab-case": "^1.0.0",
     "rimraf": "^2.6.1",
-    "semver": "5.3.0",
-    "shelljs": "^0.7.7",
-    "split": "1.0.0",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.8",
+    "split": "^1.0.0",
     "storyboard": "^3.1.1",
     "storyboard-listener-console": "^3.1.1",
     "storyboard-listener-console-parallel": "^3.1.2",
-    "terminal-kit": "^0.26.2",
     "timm": "^1.2.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-eslint": "^7.2.2",
+    "babel-cli": "6.24.1",
+    "babel-core": "6.25.0",
+    "babel-eslint": "7.2.3",
     "babel-jest": "^19.0.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.24.1",
-    "coveralls": "^2.13.0",
-    "eslint": "^3.16.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "coveralls": "2.13.1",
+    "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
-    "eslint-plugin-flowtype": "^2.30.4",
-    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-flowtype": "2.32.1",
+    "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "^6.10.0",
-    "flow-bin": "^0.44.0",
-    "jest": "^19.0.1",
+    "eslint-plugin-react": "6.10.3",
+    "flow-bin": "0.44.2",
+    "jest": "19.0.2",
     "nyc": "^10.2.0",
-    "xxl": "^1.1.0"
+    "xxl": "1.2.0"
   },
   "jest": {
     "clearMocks": true,
