--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,14 @@
 language: node_js
 node_js:
+  - 6
   - "stable"
-install:
-  - npm -g install yarn
-  - yarn
 before_script:
   - export TZ=Europe/Madrid
 script: npm run travis
 after_success:
   - 'cat ./coverage/lcov.info | ./node_modules/.bin/coveralls'
 cache:
+  yarn: true
   directories:
     - ~/.yarn
     - ~/.nvm
