--- a/package.json
+++ b/package.json
@@ -39,26 +39,26 @@
   },
   "homepage": "https://github.com/guigrpa/oao#readme",
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "commander": "^2.9.0",
-    "execa": "^0.6.0",
-    "globby": "^6.1.0",
-    "inquirer": "^3.0.5",
-    "kebab-case": "^1.0.0",
-    "rimraf": "^2.6.1",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.8",
-    "split": "^1.0.0",
-    "storyboard": "^3.1.1",
-    "storyboard-listener-console": "^3.1.1",
-    "storyboard-listener-console-parallel": "^3.1.2",
-    "timm": "^1.2.3"
+    "babel-polyfill": "6.26.0",
+    "commander": "2.11.0",
+    "execa": "0.6.3",
+    "globby": "6.1.0",
+    "inquirer": "3.2.1",
+    "kebab-case": "1.0.0",
+    "rimraf": "2.6.1",
+    "semver": "5.4.1",
+    "shelljs": "0.7.8",
+    "split": "1.0.1",
+    "storyboard": "3.1.1",
+    "storyboard-listener-console": "3.1.1",
+    "storyboard-listener-console-parallel": "3.1.2",
+    "timm": "1.2.5"
   },
   "devDependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
-    "babel-jest": "^19.0.0",
+    "babel-jest": "19.0.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
@@ -66,24 +66,20 @@
     "eslint": "3.19.0",
     "eslint-config-airbnb": "14.1.0",
     "eslint-plugin-flowtype": "2.32.1",
-    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "4.0.0",
     "eslint-plugin-react": "6.10.3",
     "flow-bin": "0.44.2",
     "jest": "19.0.2",
-    "nyc": "^10.2.0",
-    "prettier": "^1.4.4",
+    "nyc": "10.3.2",
+    "prettier": "1.5.3",
     "xxl": "1.2.0"
   },
   "jest": {
     "clearMocks": true,
     "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(js|jsx)$",
     "coverageDirectory": ".nyc_output",
-    "coverageReporters": [
-      "json",
-      "text",
-      "html"
-    ],
+    "coverageReporters": ["json", "text", "html"],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/index.js",
