--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "flow-bin": "0.44.2",
     "jest": "19.0.2",
     "nyc": "10.3.2",
-    "prettier": "1.5.3",
+    "prettier": "^1.8.2",
     "xxl": "1.2.0"
   },
   "jest": {
