--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oao",
-  "version": "1.4.1",
+  "version": "1.5.0-beta.0",
   "description": "A Yarn-based, opinionated monorepo management tool",
   "bin": {
     "oao": "lib/index.js"
