--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "homepage": "https://github.com/guigrpa/oao#readme",
   "dependencies": {
-    "babel-polyfill": "6.26.0",
+    "@babel/polyfill": "7.0.0",
     "commander": "2.11.0",
     "execa": "0.6.3",
     "globby": "6.1.0",
@@ -58,22 +58,23 @@
     "timm": "1.2.5"
   },
   "devDependencies": {
-    "babel-cli": "6.24.1",
-    "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "19.0.0",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-2": "6.24.1",
+    "@babel/cli": "7.1.5",
+    "@babel/core": "7.1.5",
+    "@babel/preset-env": "7.1.5",
+    "@babel/preset-flow": "7.0.0",
+    "@babel/preset-react": "7.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "23.6.0",
     "coveralls": "2.13.1",
-    "eslint": "3.19.0",
-    "eslint-config-airbnb": "14.1.0",
+    "eslint": "5.8.0",
+    "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-flowtype": "2.32.1",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "4.0.0",
-    "eslint-plugin-react": "6.10.3",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
+    "eslint-plugin-react": "7.11.1",
     "flow-bin": "0.44.2",
-    "jest": "19.0.2",
+    "jest": "23.6.0",
     "nyc": "10.3.2",
     "prettier": "^1.8.2",
     "xxl": "1.2.0"
