--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "coveralls": "2.13.1",
     "eslint": "5.8.0",
     "eslint-config-airbnb": "17.1.0",
+    "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-flowtype": "2.32.1",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
