--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["@babel/preset-env", "@babel/preset-flow", "@babel/preset-react"],
+  "presets": [
+    ["@babel/preset-env", { "targets": { "node": "current" } }],
+    "@babel/preset-flow",
+    "@babel/preset-react"
+  ],
 }
