--- a/package.json
+++ b/package.json
@@ -70,11 +70,11 @@
     "eslint": "5.14.1",
     "eslint-config-airbnb": "17.1.0",
     "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-flowtype": "2.32.1",
+    "eslint-plugin-flowtype": "^3.4.2",
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
-    "flow-bin": "0.44.2",
+    "flow-bin": "^0.93.0",
     "jest": "^24.1.0",
     "nyc": "10.3.2",
     "prettier": "^1.16.4",
