--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,6 @@
 {
   "presets": [
-    ["@babel/preset-env", { "targets": { "node": "current" } }],
-    "@babel/preset-flow",
-    "@babel/preset-react"
-  ],
+    ["@babel/preset-env", { "targets": { "node": "6" } }],
+    "@babel/preset-flow"
+  ]
 }
