--- a/package.json
+++ b/package.json
@@ -62,16 +62,16 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-flow": "7.0.0",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
+    "babel-eslint": "^10.0.2",
     "babel-jest": "^24.8.0",
     "coveralls": "2.13.1",
-    "eslint": "5.14.1",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-flowtype": "^3.4.2",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-flowtype": "^4.2.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "flow-bin": "^0.93.0",
     "jest": "^24.8.0",
     "nyc": "10.3.2",
