--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "semver": "5.6.0",
     "shelljs": "0.7.8",
     "split": "1.0.1",
-    "storyboard": "3.1.4",
-    "storyboard-listener-console": "3.1.4",
-    "storyboard-listener-console-parallel": "3.1.4",
+    "storyboard": "^3.3.1",
+    "storyboard-listener-console": "^3.3.1",
+    "storyboard-listener-console-parallel": "^3.3.1",
     "timm": "^1.6.2"
   },
   "devDependencies": {
