--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "minimatch": "^3.0.4",
     "rimraf": "2.6.3",
     "semver": "5.6.0",
-    "shelljs": "0.7.8",
+    "shelljs": "^0.8.4",
     "split": "1.0.1",
     "storyboard": "^3.3.1",
     "storyboard-listener-console": "^3.3.1",
